working with Docker, Postgres and creating Users
